--- a/templates/index.html
+++ b/templates/index.html
@@ -111,7 +111,7 @@
     <div class="container text-center">
     <h1 class="head">മലയാളം തീറാധാര പരിഭാഷകൻ</h1>
     <br>
-    <div class="" id="animation"></div>
+    <div class="" id="animation"></div><br><br>
     <div class="row justify-content-center">
     <div class="col" id="result" style="position: absolute; z-index: 1;"></div>
     </div>
@@ -157,7 +157,7 @@
       <br><br>
       <!-- <div class="tab-content" id="pills-tabContent"> -->
         <div class="row justify-content-around">
-        <div class="col" id="pdf-pills" role="tabpanel" aria-labelledby="pdf-tab" tabindex="0">
+        <div class="col" id="pdf-pills" style="flex: 1;" role="tabpanel" aria-labelledby="pdf-tab" tabindex="0">
             <!-- <div class="col"> -->
             <!-- <h1 id="pdfPath" style="display: none;">{{ pdf_path() }}</h1> -->
             <embed src="" id="pdfView" height="1000vh" width="700vw">
