--- a/templates/index.html
+++ b/templates/index.html
@@ -120,15 +120,22 @@
     <!-- <a class="btn btn-primary" id="disp_btn" href="/display">Display PDF</a> -->
     <div class="row justify-content-around">
     <!-- <div id="buttonsDiv" class="col-4"> -->
-    <form id="pdfForm" class="col-4" enctype="multipart/form-data" method="post">
+    <form id="pdfForm" class="col-2" enctype="multipart/form-data" method="post">
                 <input type="file" style="display: none;" name="file" id="pdfFile" accept=".pdf" required>
                 <a class="btn btn-outline-secondary" id="fileSelect">Click Select a File to upload</a>
-                <button class="btn btn-primary" id="submitBtn" type="button">Get OCR</button>
+                <button class="btn btn-primary" id="submitBtn" type="button" style="margin-top: 2px;">Get OCR</button>
             </form>
+    <div class="col-2"><button class="btn btn-primary" id="downloadOCRbtn" type="button">Download OCR</button></div>
+    <form id="ocrForm" class="col-2" enctype="multipart/form-data" method="post">
+        <input type="file" style="display: none;" name="file" id="ocrFile" accept=".txt" required>
+        <a class="btn btn-outline-secondary" id="ocrfileSelect">Click Select a File to upload</a>
+        <button class="btn btn-primary" id="uploadOCRbtn" type="button" style="margin-top: 2px;">upload OCR</button>
+    </form>
     <!-- </div> -->
-    <div class="col-4" id="tranDiv">
+    <div class="col-2" id="tranDiv">
     </div>
-    <div class="col-4">
+    <div class="col-2"><button class="btn btn-primary" id="downloadTransbtn" type="button">download translation</button></div>
+    <div class="col-2">
         <button class="btn btn-warning" id="cancelBtn" type="button">Cancel</button>
     </div>
     </div>
