with data download

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>മലയാളം തീറാധാര പരിഭാഷകൻ</title>
+    <title>malten: മലയാളം തീറാധാര പരിഭാഷകൻ</title>
     <!-- <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}"> -->
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/bootstrap.css') }}">
     <style>
@@ -109,7 +109,9 @@
 </head>
 <body>
     <div class="container text-center">
-    <h1 class="head">മലയാളം തീറാധാര പരിഭാഷകൻ</h1>
+        <div>
+            <img style="width:16vh; height:5vb;" src="static/images/logo/malten.png" alt="malten">
+    <h1 class="head">മലയാളം തീറാധാര പരിഭാഷകൻ</h1></div>
     <br>
     <div class="" id="animation"></div><br><br>
     <div class="row justify-content-center">
